# OrchSynth

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  DEPLOY.md  LICENSE.txt  THIRD_PARTY_LICENSES.txt  build-installer.bat  installer.iss
.github/workflows/: build-macos.yml
docs/: CONVOLUTION_IMPLEMENTATION_PLAN.md  build.md  graph-format.md  protocol.md  vstgui-migration.md
patches/: pluck_string_body.orchfaust.json  saw_filter_gain.orchfaust.json
resources/gui/: orch_gui_layout.json
schemas/: orchfaust.graph.schema.json
src/dsp/: ConvolutionProcessor.cpp  ConvolutionProcessor.h  FaustEngine.cpp  FaustEngine.h  PerformanceEvent.h  Voice.cpp  Voice.h  VoiceManager.cpp  VoiceManager.h
src/graph/: FaustGraphCompiler.cpp  FaustGraphCompiler.h  GraphParser.cpp  GraphParser.h  GraphTypes.h
src/osc/: OscCommandQueue.cpp  OscCommandQueue.h  OscServer.cpp  OscServer.h
src/plugin/: OrchEditorView.h  OrchFaustController.cpp  OrchFaustController.h  OrchFaustEntry.cpp  OrchFaustProcessor.cpp  OrchFaustProcessor.h  OrchVstGuiEditor.cpp  OrchVstGuiEditor.h
src/util/: LockFreeQueue.h  Logging.h  test_faust.cpp
tools/: send_graph_test.py  send_note_test.py
tools/gui-positioner/: README.md  server.js
tools/gui-positioner/public/: app.js  index.html  styles.css
